adding comments to css and html files so I can see easily where I am up to in the project

--- a/styles/main.css
+++ b/styles/main.css
@@ -147,3 +147,52 @@ p {
   color: var(--clr-primary-1);
   background: var(--clr-primary-8);
 }
+
+/*
+=============== 
+Navbar
+===============
+*/
+/*
+=============== 
+Hero
+===============
+*/
+/*
+=============== 
+About
+===============
+*/
+/* section add to globals */
+/* title add to globals */
+/* section center add to globals */
+
+/*
+=============== 
+Services
+===============
+*/
+
+/*
+=============== 
+Featured Tours
+===============
+*/
+
+/*
+=============== 
+Contact
+===============
+*/
+
+/*
+=============== 
+Gallery
+===============
+*/
+
+/*
+=============== 
+Footer
+===============
+*/
