adds the styles for the hero and centers the hero banner inside it vertically and horizontally

--- a/styles/main.css
+++ b/styles/main.css
@@ -158,6 +158,14 @@ Navbar
 Hero
 ===============
 */
+.hero {
+  min-height: 100vh;
+  background: var(--clr-primary-5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 /*
 =============== 
 About
