add styles for the hero-banner

--- a/styles/main.css
+++ b/styles/main.css
@@ -166,6 +166,12 @@ Hero
   align-items: center;
 }
 
+.hero-banner {
+  text-align: center;
+  color: var(--clr-white);
+  padding: 0 3rem;
+}
+
 /*
 =============== 
 About
