--- a/styles/main.css
+++ b/styles/main.css
@@ -191,6 +191,12 @@ Hero
   color: var(--clr-grey-5);
 }
 
+.hero-btn:hover {
+  background: transparent;
+  color: var(--clr-white);
+  border-color: var(--clr-white);
+}
+
 /*
 =============== 
 About
