--- a/styles/main.css
+++ b/styles/main.css
@@ -200,8 +200,14 @@ Hero
 @media screen and (min-width: 768px) {
   .hero {
     background:
-      linear-gradient(rgb(44, 174, 186, 0.7), rgba(0, 0, 0, 0.7)),
+      linear-gradient(rgb(44, 174, 186, 0.7), rgba(0, 0, 0, 0.8)),
       url("../images/main-bcg-jpeg.jpg") center/cover no-repeat;
+  }
+  .hero-banner {
+    padding: 0;
+  }
+  .hero-banner p {
+    max-width: 40rem;
   }
 } /*
 =============== 
