--- a/styles/main.css
+++ b/styles/main.css
@@ -152,6 +152,11 @@ p {
   padding: 5rem 0;
 }
 
+.section-title {
+  text-align: center;
+  margin-bottom: 4rem;
+}
+
 /*
 =============== 
 Navbar
