changes the span in the section title to a different colour

--- a/styles/main.css
+++ b/styles/main.css
@@ -161,6 +161,10 @@ p {
   text-transform: uppercase;
 }
 
+.section-title span {
+  color: var(--clr-primary-5);
+}
+
 /*
 =============== 
 Navbar
