--- a/styles/main.css
+++ b/styles/main.css
@@ -165,6 +165,12 @@ p {
   color: var(--clr-primary-5);
 }
 
+.section-center {
+  width: 90vw;
+  margin: 0 auto;
+  max-width: 1170px;
+}
+
 /*
 =============== 
 Navbar
