--- a/styles/main.css
+++ b/styles/main.css
@@ -171,6 +171,12 @@ p {
   max-width: 1170px;
 }
 
+@media screen and (min-width: 992px) {
+  .section-centre {
+    width: 95%;
+  }
+}
+
 /*
 =============== 
 Navbar
