--- a/styles/main.css
+++ b/styles/main.css
@@ -251,6 +251,20 @@ About
   margin-bottom: 2rem;
 }
 
+@media screen and (min-width: 992px) {
+  .about-center {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .about-img,
+  .about-info {
+    flex: 0 0 calc(50% - 2rem);
+    margin-bottom: 0;
+    align-self: center;
+  }
+}
+
 /*
 =============== 
 Services
