--- a/styles/main.css
+++ b/styles/main.css
@@ -294,6 +294,11 @@ Services
   background: var(--clr-grey-10);
 }
 
+.service {
+  text-align: center;
+  margin-bottom: 3rem;
+}
+
 /*
 =============== 
 Featured Tours
