--- a/styles/main.css
+++ b/styles/main.css
@@ -299,6 +299,15 @@ Services
   margin-bottom: 3rem;
 }
 
+.service-icon {
+  background: var(--clr-primary-5);
+  color: var(--clr-primary-1);
+  padding: 0.5rem;
+  display: inline-block;
+  font-size: 2rem;
+  margin-bottom: 1.5rem;
+}
+
 /*
 =============== 
 Featured Tours
