sets up a 3 column layout for services from 992px width screen and up

--- a/styles/main.css
+++ b/styles/main.css
@@ -326,6 +326,12 @@ Services
   }
 }
 
+@media screen and (min-width: 992px) {
+  .service {
+    flex: 0 0 calc(33.333% - 1rem);
+  }
+}
+
 /*
 =============== 
 Featured Tours
