adds styles for the tour cards

--- a/styles/main.css
+++ b/styles/main.css
@@ -354,6 +354,13 @@ Featured Tours
 ===============
 */
 
+.tour-card {
+  transition: var(--transition);
+  background: var(--clr-grey-10);
+  box-shadow: var(--light-shadow);
+  margin-bottom: 2rem;
+}
+
 /*
 =============== 
 Contact
