sets tour img container div to relative and gives tour img fixed height with object-fit set to cover

--- a/styles/main.css
+++ b/styles/main.css
@@ -366,6 +366,15 @@ Featured Tours
   transform: scale(1.02);
 }
 
+.tour-img-container {
+  position: relative;
+}
+
+.tour-img {
+  height: 15rem;
+  object-fit: cover;
+}
+
 /*
 =============== 
 Contact
