repositions and styles the tour date in the tour card

--- a/styles/main.css
+++ b/styles/main.css
@@ -375,6 +375,17 @@ Featured Tours
   object-fit: cover;
 }
 
+.tour-date {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  background: var(--clr-primary-8);
+  margin-bottom: 0;
+  color: var(--clr-primary-1);
+  text-transform: capitalize;
+  padding: 0.25rem 0.5rem;
+}
+
 /*
 =============== 
 Contact
