changes the layout of the style footer in tour card

--- a/styles/main.css
+++ b/styles/main.css
@@ -390,6 +390,13 @@ Featured Tours
   padding: 1.25rem 1.5rem;
 }
 
+.tour-footer {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
 /*
 =============== 
 Contact
