styles the paragraph text in the tour card footer

--- a/styles/main.css
+++ b/styles/main.css
@@ -397,6 +397,13 @@ Featured Tours
   align-items: center;
 }
 
+.tour-footer p {
+  line-height: 0;
+  margin-bottom: 0;
+  text-transform: capitalize;
+  color: var(--clr-primary-5);
+}
+
 /*
 =============== 
 Contact
