--- a/styles/main.css
+++ b/styles/main.css
@@ -407,6 +407,16 @@ Featured Tours
 .tour-btn {
   text-align: center;
 }
+@media screen and (min-width: 768px) {
+  .featured-center {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .tour-card {
+    flex: 0 0 calc(50% - 2rem);
+  }
+}
 
 /*
 =============== 
