sets up 3 column layout for tour cards from 1170px screen width

--- a/styles/main.css
+++ b/styles/main.css
@@ -418,6 +418,12 @@ Featured Tours
   }
 }
 
+@media screen and (min-width: 1170px) {
+  .tour-card {
+    flex: 0 0 calc(33.333% - 2rem);
+  }
+}
+
 /*
 =============== 
 Contact
