--- a/styles/main.css
+++ b/styles/main.css
@@ -443,6 +443,20 @@ Contact
   display: flex;
   max-width: 28rem;
 }
+
+.form-control {
+  flex: 1 1 auto;
+  color: var(--clr-grey-5);
+}
+.form-control,
+.btn-submit {
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  font-weight: 300;
+  letter-spacing: var(--spacing);
+  background: var(--clr-white);
+}
 /*
 =============== 
 Gallery
