--- a/styles/main.css
+++ b/styles/main.css
@@ -456,6 +456,8 @@ Contact
   font-weight: 300;
   letter-spacing: var(--spacing);
   background: var(--clr-white);
+  text-transform: capitalize;
+  border: transparent;
 }
 /*
 =============== 
