set text color for placeholder in the form control of contact section

--- a/styles/main.css
+++ b/styles/main.css
@@ -459,6 +459,10 @@ Contact
   text-transform: capitalize;
   border: transparent;
 }
+
+.form-control::placeholder {
+  color: inherit;
+}
 /*
 =============== 
 Gallery
