--- a/styles/main.css
+++ b/styles/main.css
@@ -463,6 +463,16 @@ Contact
 .form-control::placeholder {
   color: inherit;
 }
+
+.btn-submit {
+  font-family: var(--ff-primary);
+  margin-left: 0.5rem;
+  background: var(--clr-primary-8);
+  color: var(--clr-primary-1);
+  cursor: pointer;
+  transform: var(--transition);
+}
+
 /*
 =============== 
 Gallery
