style individual gallery img

--- a/styles/main.css
+++ b/styles/main.css
@@ -512,6 +512,11 @@ Gallery
   cursor: pointer;
   transition: var(--transition);
 }
+.gallery-img {
+  height: 17rem;
+  object-fit: cover;
+  transition: var(--transition);
+}
 
 /*
 =============== 
