--- a/styles/main.css
+++ b/styles/main.css
@@ -517,6 +517,12 @@ Gallery
   object-fit: cover;
   transition: var(--transition);
 }
+.gallery-img-container:hover .gallery-img {
+  opacity: 0.5;
+}
+.gallery-img-container:hover .gallery-icon {
+  opacity: 1;
+}
 
 /*
 =============== 
