adds main styles for footer

--- a/styles/main.css
+++ b/styles/main.css
@@ -545,3 +545,10 @@ Gallery
 Footer
 ===============
 */
+
+.footer {
+  background: var(--clr-grey-1);
+  text-align: center;
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
