--- a/styles/main.css
+++ b/styles/main.css
@@ -552,3 +552,11 @@ Footer
   padding-left: 2rem;
   padding-right: 2rem;
 }
+
+.footer-links,
+.footer-icons {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 1.5rem;
+  flex-wrap: wrap;
+}
