--- a/styles/main.css
+++ b/styles/main.css
@@ -560,3 +560,12 @@ Footer
   margin-bottom: 1.5rem;
   flex-wrap: wrap;
 }
+
+.footer-link {
+  color: var(--clr-white);
+  text-transform: capitalize;
+  font-size: 1rem;
+  margin-right: 1rem;
+  letter-spacing: var(--spacing);
+  transition: var(--transition);
+}
