add hover effect for footer link

--- a/styles/main.css
+++ b/styles/main.css
@@ -569,3 +569,7 @@ Footer
   letter-spacing: var(--spacing);
   transition: var(--transition);
 }
+
+.footer-link:hover {
+  color: var(--clr-primary-5);
+}
