styles the copyright class

--- a/styles/main.css
+++ b/styles/main.css
@@ -584,3 +584,9 @@ Footer
 .footer-icon:hover {
   color: var(--clr-primary-5);
 }
+
+.copyright {
+  text-transform: capitalize;
+  letter-spacing: var(--spacing);
+  color: var(--clr-white);
+}
