--- a/styles/main.css
+++ b/styles/main.css
@@ -182,6 +182,15 @@ p {
 Navbar
 ===============
 */
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: var(--clr-white);
+  box-shadow: var(--dark-shadow);
+  z-index: 2;
+}
 
 .nav-title {
   text-align: left;
