--- a/styles/main.css
+++ b/styles/main.css
@@ -70,14 +70,10 @@ ul {
 a {
   text-decoration: none;
 }
-img {
+img:not(.nav-logo) {
   width: 100%;
   display: block;
 }
-/* img:not(.nav-logo) {
-  width: 100%;
-  display: block;
-} */
 
 h1,
 h2,
@@ -191,23 +187,45 @@ Navbar
   box-shadow: var(--dark-shadow);
   z-index: 2;
 }
-
 .nav-icons {
   display: none;
 }
-
-.nav-title {
-  text-align: left;
-  margin-bottom: 4rem;
+.nav-center {
+  width: 100%;
+  max-width: 1170px;
+  margin: 0 auto;
 }
-
-.nav-title h1 {
-  text-transform: uppercase;
-  font-size: 2rem;
+.nav-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 2rem;
 }
-
-.nav-title span {
+.nav-toggle {
+  background: transparent;
+  border: transparent;
+  font-size: 1.5rem;
   color: var(--clr-primary-5);
+  cursor: pointer;
+  transition: var(--transition);
+}
+.nav-toggle:hover {
+  transform: scale(1.2);
+}
+.nav-link {
+  display: block;
+  padding: 1rem 2rem;
+  text-transform: capitalize;
+  letter-spacing: var(--spacing);
+  transition: var(--transition);
+  color: var(--clr-grey-1);
+  cursor: pointer;
+  font-size: 1rem;
+}
+.nav-link:hover {
+  color: var(--clr-primary-1);
+  background: var(--clr-primary-8);
+  padding-left: 2.25rem;
 }
 
 /*
