--- a/styles/main.css
+++ b/styles/main.css
@@ -187,6 +187,15 @@ Navbar
   box-shadow: var(--dark-shadow);
   z-index: 2;
 }
+.nav-logo {
+  margin: 0;
+  padding: 0;
+  line-height: 1;
+  font-size: 1rem;
+}
+.nav-logo span {
+  color: var(--clr-primary-5);
+}
 .nav-icons {
   display: none;
 }
